logic errors i guess LOL *cries